--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -74,8 +74,10 @@
 \newcommand{\conga}[1]{\stackrel{\mathclap{(#1)}}{\congruente}}
 \newcommand{\divset}[2]{\mathcal{D}(#1) = \set{#2}}
 \newcommand{\divsetP}[2]{\mathcal{D_+}(#1) = \set{#2}}
-\newcommand{\ub}[2]{ \underbrace{\textstyle #1}_{\mathclap{#2}} }
-\newcommand{\ob}[2]{ \overbrace{\textstyle #1}^{\mathclap{#2}} }
+\newcommand{\ub}[2]{\underbrace{\textstyle #1}_{\mathclap{#2}}}
+\newcommand{\ob}[2]{\overbrace{\textstyle #1}^{\mathclap{#2}}}
+\newcommand{\ua}[2]{\underset{\everymath{\textstyle}\mathclap{\substack{\downarrow \\  #2}}}{#1}}
+\newcommand{\oa}[2]{\overset{\everymath{\textstyle}\mathclap{\substack{#2 \\ \uparrow }}}{#1}}
 \def\cop{\, \perp \, }
 \def\nocop{\, \not\perp \, }
 
@@ -110,7 +112,6 @@
 \def\ytext{\quad\text{y}\quad}
 \def\otext{\quad\text{o}\quad}
 \newcommand{\cajaResultado}[1]{\fcolorbox{orange}{white}{\ensuremath{\displaystyle#1}}}
-            
 
 % Estrellita para hacer llamadas de atención, viene en divertidos colores
 % para coleccionar.
@@ -242,6 +243,7 @@
 }
 
 \newenvironment{aportes}{
+  \par
   \vspace{10pt}
   \begin{minipage}{0.9\linewidth}
     \tt\footnotesize
@@ -320,8 +322,6 @@
 \def\mehBlank{\faIcon[regular]{meh-blank}}
 \def\rollingEyes{\faIcon[regular]{meh-rolling-eyes}}
 \def\surprise{\faIcon[regular]{surprise}}
-
-
 
 %%% (☞⌐▀͡ ͜ʖ͡▀ )☞ Yo mama
 \def\superIdol{https://www.youtube.com/watch?v=DKpaKHUlyBY}
