add extra 7 guia 6

--- a/6-guia/teoria-6/teoria-6.tex
+++ b/6-guia/teoria-6/teoria-6.tex
@@ -135,7 +135,7 @@ Notar que:
         \end{itemize}
 \end{itemize}
 
-\item \textit{Propiedades: $w \en G_n$}
+\item \hypertarget{teoria6:propiedadesGn}{\textit{Propiedades: $w \en G_n$}}
 \begin{itemize}
   \item $m \en \enteros$ y $n \divideA m \entonces w^m = 1$.
 
