--- a/7-guia/ejercicios-7/ej-32-7.tex
+++ b/7-guia/ejercicios-7/ej-32-7.tex
@@ -1,1 +1,6 @@
-\ejercicio\hacer
+\begin{enunciado}{\ejercicio}
+  Sea $n \en \naturales$.
+  Probar que $\sumatoria{k=0}{n}X^k \en \complejos[X]$ tiene todas sus raíces complejas simples.
+\end{enunciado}
+
+\hacer
