--- a/1-guia/ejercicios-1/ej-13-1.tex
+++ b/1-guia/ejercicios-1/ej-13-1.tex
@@ -33,7 +33,7 @@
             F & F & F & V   & F     & F     & F             & \orange{F}          & \orange{F}                \\ \hline
           \end{array}
         $$
-        Del resultado de la tabla se concluye que distribución entre la resta y una diferencia simétrica.
+        Del resultado de la tabla se concluye que hay distribución entre la resta y una diferencia simétrica.
 
   \item ¡Es falsa!
         Lo demuestro por \textit{contraejemplo}.
