--- a/1-guia/ejercicios-1/ej-12-1.tex
+++ b/1-guia/ejercicios-1/ej-12-1.tex
@@ -160,7 +160,7 @@
 \begin{enumerate}[label=\roman*)]
   \item
 
-        \begin{enumerate}[label=(\alph*)]
+        \begin{enumerate}[label=\alph*)]
           \item $\paratodo n \en \naturales,\, n \geq 5 \o n \leq 8$.\par
                 La proposición es verdadera. El conjunto descrito por $\set{ n \en \naturales \talque n \leq 8 \o n \geq 5} = \naturales$\par
                 \doceiA                        \par
@@ -209,7 +209,7 @@
         \separadorCorto
 
   \item
-        \begin{enumerate}[label=(\alph*)]
+        \begin{enumerate}[label=\alph*)]
           \item $\existe n \en \naturales,\, n < 5 \y n > 8$.\par
                 $A =  \set{n \en \naturales \talque n < 5 \y n > 8} = \vacio \entonces \noexiste n$ que cumpla lo pedido.\par
                 \doceiiA \par
@@ -246,6 +246,8 @@
         \end{enumerate}
 
   \item
+          e)
+
         $$
           \begin{array}{|c|c|c|c|}
             \hline
