remaster 28 guia 1 y alguna cosita más

--- a/1-guia/ejercicios-1/ej-27-1.tex
+++ b/1-guia/ejercicios-1/ej-27-1.tex
@@ -93,7 +93,7 @@
 
         \textit{Antisimétrica: }\par
         La $\relacion$ no es antisimétrica, como contraejemplo se ve que
-        $1 \relacion 92$ y $92 \relacion 1$ con $1 \distinto 92\quad \skull$.
+                $1 \relacion 92$ y $92 \relacion 1$ con $1 \distinto 92\quad$ \faIcon{skull}.
 
   \item
         A priori no sé como encontrar las clases de equivalencia, pero solo buscando la relación del $1$
