--- a/1-guia/ejercicios-1/ej-4-1.tex
+++ b/1-guia/ejercicios-1/ej-4-1.tex
@@ -32,7 +32,7 @@
 % Contribuciones
 \begin{aportes}
   %\aporte{url}{nombre icono}
-  \item \aporte{\dirRepo}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://www.instagram.com/fransureda_}{Francisco Sureda \instagram}
   \item \aporte{https://www.instagram.com/juaanparajo}{Juan Parajó \instagram}
 \end{aportes}
