--- a/1-guia/ejercicios-1/ej-18-1.tex
+++ b/1-guia/ejercicios-1/ej-18-1.tex
@@ -14,13 +14,19 @@
     \end{enumerate}
   \end{multicols}
 \end{enunciado}
+Describir por extensión es mostrar todos los elementos de forma explícita. Para estos conjuntos finitos con esas relaciones,
+se hace así:
 
 \begin{enumerate}[label=\roman*)]
-  \item $(a,b) \en \relacion \sisolosi a\leq b \to   (a,b) \en \relacion \sii   \set{(1,1), (1,3), (1,5), (1,7), (2,3), (2,5), (2,7), (3,3), (3,5), (3,7)}$
+  \item $(a,b) \en \relacion \sii a\leq b \sii   \set{(1,1), (1,3), (1,5), (1,7), (2,3), (2,5), (2,7), (3,3), (3,5), (3,7)}$
 
-  \item $(a,b) \en \relacion \sisolosi a > b \to     (a,b) \en \relacion \sii   \set{(2,1), (3, 1)}$
+  \item $(a,b) \en \relacion \sii a > b \to     (a,b) \en \relacion \sii   \set{(2,1), (3, 1)}$
 
-  \item $(a,b) \en \relacion \sisolosi a \cdot b \to (a,b) \en \relacion \sii    \set{(2,1), (2,3), (2,5), (2,7)}$
+  \item $(a,b) \en \relacion \sii a \cdot b \to (a,b) \en \relacion \sii    \set{(2,1), (2,3), (2,5), (2,7)}$
 
-  \item $(a,b) \en \relacion \sisolosi a + b > 6 \to (a,b) \en \relacion \sii\set{(1,7), (2,5), (2, 7), (3, 5), (3, 7)}$
+  \item $(a,b) \en \relacion \sii a + b > 6 \to (a,b) \en \relacion \sii\set{(1,7), (2,5), (2, 7), (3, 5), (3, 7)}$
 \end{enumerate}
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
