--- a/macros/encabezado-pie.tex
+++ b/macros/encabezado-pie.tex
@@ -1,12 +1,13 @@
 % Info para armar título.
 
-\title{Apunte único: Álgebra I - Práctica \guia} % título
+\title{\setulcolor{red}\ul{Apunte Único}: Álgebra I - Práctica \guia} % título
 \author{Por alumnos de Álgebra I\\
   Facultad de Ciencias Exactas y Naturales \\
-  UBA} % autores y lugar
+  UBA\\
+  {\tiny última actualización \update}} % autores y lugar
 \date{} % Así no aparece la fecha 
-\maketitle  % para que aparezca el título en el documento
 
+\maketitle  % para que aparezca el título en el documento
 \thispagestyle{empty} % borro el número de la primera página
 
 \pagestyle{fancy} % activo los headers y footers
@@ -20,7 +21,7 @@
   \small\github
   ¡Aportá con correcciones, mandando ejercicios, \yellow{\faIcon{star}} \href{\dirRepo}{al repo}, críticas, todo sirve.\\
   La idea es que la guía esté actualizada y con el mínimo de errores.
-  
+
 }    % pie izquierdo pares
 \fancyfoot[OL]{
   \small \telegram ¿Errores? \href{\dirTelegram}{Avisá acá} así se corrige y ganamos todos.\\
