--- a/macros/indice.tex
+++ b/macros/indice.tex
@@ -4,7 +4,7 @@
 
 %\guia está definido en padres de este archivo
 
-\vspace{4cm}
+\vfill
 
 \begin{center}
   \hypertarget{indice-\guia}{\Large\textit{Choose your destiny: }}\par
@@ -30,5 +30,7 @@
 
   \end{itemize}
 \end{center}
+
+\vfill
 
 \newpage % nueva página
