--- a/6-guia/ejercicios-6-extra/ej-extra-6-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-6-6.tex
@@ -9,9 +9,9 @@
 \bigskip
 
 \underline{Distintas formas de atacarlo}, y cual ves primero depende de vos, o dicho de otra manera de tus poderes, o
-de cuanta maná tengas para ejecutar un típico \faIcon{magic} \textit{matemagium incantatum} \faIcon{magic}:
+de cuanta maná tengas para ejecutar un típico \magic \textit{matemagium incantatum} \magic:
 
-\begin{enumerate}[label=\faIcon{magic}$_{\arabic*}$)]
+\begin{enumerate}[label=\magic$_{\arabic*}$)]
   \item\label{extra6-6:item1} $$
           (2-z^3)^4 = z^{12}
           \sii
