--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -322,6 +322,7 @@
 \def\mehBlank{\faIcon[regular]{meh-blank}}
 \def\rollingEyes{\faIcon[regular]{meh-rolling-eyes}}
 \def\surprise{\faIcon[regular]{surprise}}
+\def\magic{\href{https://www.youtube.com/watch?v=VNKuARjkWEg}{\faIcon{magic}}}
 
 %%% (☞⌐▀͡ ͜ʖ͡▀ )☞ Yo mama
 \def\superIdol{https://www.youtube.com/watch?v=DKpaKHUlyBY}
