add ejParcial 15 guia  7

--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -318,11 +318,11 @@
 }
 
 %%% Emoticones
-\def\meh{\faIcon[regular]{meh}}
-\def\mehBlank{\faIcon[regular]{meh-blank}}
-\def\rollingEyes{\faIcon[regular]{meh-rolling-eyes}}
-\def\surprise{\faIcon[regular]{surprise}}
-\def\magic{\href{https://www.youtube.com/watch?v=VNKuARjkWEg}{\faIcon{magic}}}
+\def\meh{\faIcon[regular]{meh}\xspace}
+\def\mehBlank{\faIcon[regular]{meh-blank}\xspace}
+\def\rollingEyes{\faIcon[regular]{meh-rolling-eyes}\xspace}
+\def\surprise{\faIcon[regular]{surprise}\xspace}
+\def\magic{\href{https://www.youtube.com/watch?v=VNKuARjkWEg}{\faIcon{magic}}\xspace}
 
 %%% (☞⌐▀͡ ͜ʖ͡▀ )☞ Yo mama
 \def\superIdol{https://www.youtube.com/watch?v=DKpaKHUlyBY}
