fix extra 15 guia 4

--- a/7-guia/ejercicios-7-extra/ej-extra-15-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-15-7.tex
@@ -45,15 +45,15 @@ $$
 $$
 Podemos reescribir {\LARGE \rollingEyes}:
 $$
-	f = (x^2 + 2x + 2) \cdot (x-3) \cdot (x^2 -2x - 4)
+	f = (x^2 + 2x + 2) \cdot (x-4) \cdot (x^2 -2x - 4)
 $$
 {\huge \rollingEyes} el último factor tiene raíces $1 - \sqrt{5}$ y $1 + \sqrt{5}$ y ya escribo $f$ en la factorizaciones pedidas:
 $$
 	\cajaResultado{
 		\begin{array}{rcll}
-			f & = & (x^2 + 2x + 2) \cdot (x-3) \cdot (x^2 -2x - 4)                               & \en \racionales[X] \\
-			f & = & (x^2 + 2x + 2) \cdot (x-3) \cdot (1 - \sqrt{5}) \cdot (1 + \sqrt{5})         & \en \reales[X]     \\
-			f & = & (-1 + i) \cdot (-1 -i) \cdot (x-3) \cdot (1 - \sqrt{5}) \cdot (1 + \sqrt{5}) & \en \complejos[X]
+			f & = & (x^2 + 2x + 2) \cdot (x - 4) \cdot (x^2 -2x - 4)                               & \en \racionales[X] \\
+                f & = & (x^2 + 2x + 2) \cdot (x - 4) \cdot (x - (1 - \sqrt{5})) \cdot (x - (1 + \sqrt{5}))         & \en \reales[X]     \\
+                f & = & (x - (-1 + i)) \cdot (x - (-1 - i)) \cdot (x - 4) \cdot (x - (1 - \sqrt{5})) \cdot (x - (1 + \sqrt{5})) & \en \complejos[X]
 		\end{array}
 	}
 $$
