--- a/1-guia/ejercicios-1/ej-27-1.tex
+++ b/1-guia/ejercicios-1/ej-27-1.tex
@@ -62,7 +62,7 @@
 \begin{enumerate}[label=\alph*)]
   \item Primero acomodo la condición de la relación:
         $$x^2 - y^2 = 93x - 93y
-          \Sii{\red{!!!}}
+                \Sii{\red{!!!}}[\magic]
           \llave{c}{
             x      \igual{$\llamada{1}$}  y \\
             \text{ o bien }                            \\
