--- a/6-guia/ejercicios-6-extra/ej-extra-8-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-8-6.tex
@@ -12,7 +12,11 @@ $$
   \conj{\omega}^6 = e^{i\frac{18\pi }{11}}
 $$
 
-Para que ese número espantoso esté en $G_{2n+1}$ debe ocurrir que:
+\begin{center}
+  $\to$ Mirá \hyperlink{teoria6:propiedadesGn}{estas propiedades} y  \hyperlink{teoria6:gruposGn}{estos gráficos} para sacar intuición de lo que viene
+\end{center}
+
+Para que ese número espantoso esté en $G_{2n+1}$ debe ocurrir que \red{!!}:
 $$
   11 \divideA 2n+1
   \Sii{def}
@@ -21,19 +25,19 @@ $$
   \congruencia{n}{5}{11} \llamada1
 $$
 
-Por otro lado para que la sumatoria esa de cero, sabiendo que $\omega \distinto 1$:
+Por otro lado para que la sumatoria esa de cero, sabiendo que $\omega \distinto 1$, suma geométrica:
 $$
   \sumatoria{j=0}{n+4} \omega^{11j}
   =
   \frac{\left(\omega^{11} \right)^{n + 5} - 1}{\omega - 1} = 0
-  \Sii{$\omega \distinto 0$}
+  \sii
   \left(\omega^{11} \right)^{n + 5} = 1
   \sii
-  \left(e^{\frac{2\pi i}{33}}\right)^{11n + 55} = e^{2\blue{h}\pi}
+  \left(e^{\frac{2\pi i}{33}}\right)^{11n + 55} \igual{\red{!}} e^{2\blue{h}\pi}
   \Sii{\red{!}}
   \frac{22\pi}{33}n + \frac{110\pi}{33}n = 2\blue{h}\pi
 $$
-Esa última ecuación da
+Esa última ecuación da {\tiny salacadula chalchicomula} \magic:
 $$
   \congruencia{n}{1}{3} \llamada2
 $$
