--- a/6-guia/teoria-6/teoria-6.tex
+++ b/6-guia/teoria-6/teoria-6.tex
@@ -76,7 +76,7 @@
         \red{Entender bien como sacar raíces $n$-ésimas es importantísimo para toda la guía de complejos y la próxima de polinomios}.
 \end{itemize}
 
-\underline{\textit{Grupos $G_n$:}}
+\hypertarget{teoria6:gruposGn}{\underline{\textit{Grupos $G_n$:}}}
 
 \begin{itemize}[label=\color{gray} \tiny \faIcon{smile}]
 \item $G_n = \set{w \en \complejos / w^n = 1} = \set{e^{\frac{2k \pi}{n} i}\ :\ 0\leq k \leq n-1}$
