--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -322,7 +322,7 @@
 \def\mehBlank{\faIcon[regular]{meh-blank}\xspace}
 \def\rollingEyes{\faIcon[regular]{meh-rolling-eyes}\xspace}
 \def\surprise{\faIcon[regular]{surprise}\xspace}
-\def\magic{\href{https://www.youtube.com/watch?v=VNKuARjkWEg}{\faIcon{magic}}\xspace}
+\def\magic{\href{https://www.youtube.com/watch?v=4u20AEDYhcw}{\faIcon{magic}}\xspace}
 
 %%% (☞⌐▀͡ ͜ʖ͡▀ )☞ Yo mama
 \def\superIdol{https://www.youtube.com/watch?v=DKpaKHUlyBY}
