fix typo ej 10 i guia 2

--- a/2-guia/ejercicios-2/ej-10-2.tex
+++ b/2-guia/ejercicios-2/ej-10-2.tex
@@ -29,7 +29,7 @@
 
                 Desarrollemos el lado izquierdo de la desigualdad:
                 \begin{align*}
-                  2^{n+3}   & = 2 \cdot 2^{n+2} \igual{HI} 2 \cdot (3^n + 5^n) = 2 \cdot 3^n + 2 \cdot 5^n \leq
+                  2^{n+3}   & = 2 \cdot 2^{n+2} \menorIgual{HI} 2 \cdot (3^n + 5^n) = 2 \cdot 3^n + 2 \cdot 5^n \leq
                   3 \cdot 3^n + 5 \cdot 5^n = 3^{n+1} + 5^{n+1}                                                 \\
                   2^{n+3}   & \leq 3^{n+1} + 5^{n+1}                                                            \\
                   \entonces & P(n+1): V
@@ -377,4 +377,5 @@
   %% iconos : \github, \instagram, \tiktok, \linkedin
   %\aporte{url}{nombre icono}
   \item \aporte{https://github.com/koopardo/}{Marcos Zea \github}
+  \item \aporte{\neverGonnaGiveYouUp}{Damián Rojas \youtube}
 \end{aportes}
