--- a/2-guia/ejercicios-2/ej-7-2.tex
+++ b/2-guia/ejercicios-2/ej-7-2.tex
@@ -243,5 +243,5 @@
 \begin{aportes}
   %\aporte{url}{nombre icono}
   \item \aporte{https://github.com/misProyectosPropios}{Iñaki Frutos \github}
-  \item \aporte{\dirRepo}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
