--- a/2-guia/ejercicios-2/ej-14-2.tex
+++ b/2-guia/ejercicios-2/ej-14-2.tex
@@ -62,7 +62,7 @@
         $$
         \textit{Caso Base: }
         $$
-          p(3) : \frac{3(3-3)}{2} = 0,
+          p(\blue{3}) : \frac{\blue{3} (\blue{3} - 3)}{2} = 0,
         $$
         lo cual es verdad para el triángulo.
 
@@ -75,7 +75,10 @@
 
         Entonces quiero probar que:
         $$
-          p(\blue{k+1}): d_{\blue{k+1}} = \frac{(\blue{k+1})(\blue{k + 1} - 3)}{ 2 }
+          p(\blue{k+1}): d_{\blue{k+1}} =
+          \frac{(\blue{k+1})(\blue{k + 1} - 3)}{ 2 }
+          =
+          \frac{(k+1)(k - 2)}{ 2 }
         $$
         también sea verdadera.
 
@@ -85,7 +88,7 @@
           d_{k+1} \igual{def} d_k + k-1
           \igual{\purple{HI}}
           \purple{\frac{k (k-3)}{2}} + k-1 =
-          \frac{k^2 - k - 2}{2} =
+          \frac{k^2 - k - 2}{2} \igual{\red{!}}
           \frac{(k+1)(k-2)}{2}
         $$
 
