--- a/1-guia/ejercicios-1/ej-26-1.tex
+++ b/1-guia/ejercicios-1/ej-26-1.tex
@@ -56,8 +56,11 @@
 
         Como la relación es \textit{reflexiva, simétrica  y transitiva} es de equivalencia \Tilde.\par\bigskip
 
-        \textit{Antisimétrica: $\paratodo A, B \en P si A \relacion B y B \relacion A \entonces A = B$}\par
-        Se podría encontrar un contraejemplo: Ya dijimos que $A \triangle B = B \triangle A$. No debería ser muy complicado encontrar un $A$ y un $B$
+        \textit{Antisimétrica: $\paratodo A, B \en P
+            \text{ si } A \relacion B \ytext B \relacion A \entonces A = B$}
+
+        Se podría encontrar un contraejemplo:
+        Ya dijimos que $A \triangle B = B \triangle A$. No debería ser muy complicado encontrar un $A$ y un $B$
         distintos que cumplan
         $$
           A \relacion B \ytext B\relacion A
