--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -314,7 +314,7 @@
     {
     \separadorCorto % linea debajo del enunciado
     \par
-  \end{minipage}\par
+  \end{minipage}\par\medskip
 }
 
 %%% Emoticones
