fix preamble syntax

--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -17,7 +17,7 @@
 \usepackage[dvipsnames,table]{xcolor} % Para colorear el texto: black, blue, brown, cyan, darkgray, gray, green, lightgray, lime, magenta, olive, orange, pink, purple, red, teal, violet, white, yellow.
 \usepackage{color} % Para colorear el texto: black, blue, brown, cyan, darkgray, gray, green, lightgray, lime, magenta, olive, orange, pink, purple, red, teal, violet, white, yellow.
 \usepackage{enumitem} % Cambiar labels y más flexibilidad para el enumerate
-\usepackage{multicol} 
+\usepackage{multicol}
 \usepackage{tikz} % para graficar
 \usepackage{cancel} % cancelar fórmulas
 \usepackage{titlesec} % para editar titulos y hacer secciones con formato a medida
@@ -44,8 +44,6 @@
 % \usepackage{lipsum} % dummy text
 % \usepackage{caption} % Configuracion de figuras y tablas
 
-
-
 % para hacer los graficos tipo grafos
 \usetikzlibrary{shapes,arrows.meta, chains, matrix, calc, trees, positioning, fit}
 \usetikzlibrary{external,decorations.pathreplacing,angles,quotes}
@@ -53,17 +51,17 @@
 % En general quiero que este paquete sea el último en importarse
 \usepackage{hyperref} % para que haya links navegables en el PDF
 \hypersetup{
-    pdftitle={Apunté Único de Álgebra I},
-    pdfauthor={Por los alumnos y exalumnos de Álgebra I},
-    pdfkeywords={algebra 1, resueltos},
-    colorlinks=true,
-    pdfborder={0,0,0}, % sin border
-    citecolor=cyan,
-    refcolor=magenta,
-    linkcolor=blue!80!red,
-    filecolor=green,
-    urlcolor=red!10!purple,
-    }
+  pdftitle={Apunté Único de Álgebra I},
+  pdfauthor={Por los alumnos y exalumnos de Álgebra I},
+  pdfkeywords={algebra 1, resueltos},
+  colorlinks=true,
+  pdfborder={0 0 0}, % sin border
+  citecolor=cyan,
+  refcolor=magenta,
+  linkcolor=blue!80!red,
+  filecolor=green,
+  urlcolor=red!10!purple,
+}
 \urlstyle{same}
 
 \setlength{\parindent}{0pt} % Para que no haya indentación en las nuevas líneas.
